--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "lint-staged": "^13.0.3"
+    "lint-staged": "^13.0.3",
+    "husky": "^8.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,7 +27,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --ext .js,.jsx src/",
-    "lint:fix": "eslint --ext .js,.jsx src/ --fix"
+    "lint:fix": "eslint --ext .js,.jsx src/ --fix",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
