--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "lint-staged": "^13.0.3",
-    "husky": "^8.0.0"
+    "gh-pages": "^4.0.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
