--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
+  },
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#441A59",
+    "titleBar.activeBackground": "#5F257C",
+    "titleBar.activeForeground": "#FCF8FD"
   }
 }
